--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 matplotlib
 numpy
-tensorflow
 tensorboard
 pandas
-Pillow
 sklearn
-keras
-keras-tuner
+termcolor-logger>=1.0.3
+yaml_config_wrapper>=1.0.4
+torch
+torchvision==0.8.2
+timm==0.3.2
+mmcv-full==1.2.7
+opencv-python==4.5.1.48
