--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ logs/*.log
 /pretrained/ImageNet-1K/mit_b5.pth
 /data/MSD/
 /pretrained/ImageNet-1K/mit_b0.pth
+/pretrained/ImageNet-1K/mit_b3.pth
